Changing Base64 dependency to JDK dependency